--- a/frontend/auth-microfrontend/package.json
+++ b/frontend/auth-microfrontend/package.json
@@ -13,8 +13,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts --openssl-legacy-provider build",
+    "start": "webpack-dev-server --mode development --open --hot --port 8081",
+    "build": "webpack --mode production",
     "test": "react-scripts test",
     "test:microfrontend": "npx jest ./index.spec.js",
     "eject": "react-scripts eject"
@@ -38,9 +38,20 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "@babel/preset-react": "^7.14.5",
     "@playwright/test": "^1.45.0",
     "@types/node": "^20.14.9",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^6.4.0",
     "dotenv": "^16.0.2",
-    "wait-port": "^1.1.0"
+    "html-webpack-plugin": "^5.3.2",
+    "style-loader": "^3.3.0",
+    "svg-url-loader": "^8.0.0",
+    "wait-port": "^1.1.0",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3"
   }
 }
